--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <title>Sunlight Air Systems</title>
 </head>
 
-<body>
+<body style='overflow-y: scroll;'>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
